--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "vue-cli-service build"
 	},
 	"dependencies": {
+		"@braid/vue-formulate": "^2.4.3",
 		"axios": "^0.19.2",
 		"core-js": "^3.6.5",
 		"lodash": "^4.17.19",
@@ -20,6 +21,8 @@
 		"@vue/cli-plugin-router": "~4.5.0",
 		"@vue/cli-plugin-vuex": "~4.5.0",
 		"@vue/cli-service": "~4.5.0",
+		"axios-mock-adapter": "^1.18.2",
+		"faker": "^4.1.0",
 		"node-sass": "^4.12.0",
 		"sass-loader": "^8.0.2",
 		"vue-template-compiler": "^2.6.11",
